* Fixed block visibility check bug. * Improved Text Rendering * Added utilities class. * Allowed window resizing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set(OPENCRAFT_HEADERS
 	include/BaseBlock.h
 	include/ChunkLoader.h
 	include/WorldChunk.h
+	include/util.h
 )
 source_group("Header Files" FILES ${OPENCRAFT_HEADERS})
 source_group("Source Files" FILES ${OPENCRAFT_SOURCES})
