Trying to fix linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,10 @@ include_directories(${PROJECT_SOURCE_DIR}/depends/include/)
 target_link_libraries(OpenCraft ${PROJECT_SOURCE_DIR}/depends/lib/Glee.lib)
 target_link_libraries(OpenCraft ${PROJECT_SOURCE_DIR}/depends/lib/freeglut.lib)
 
-# 'fix' LIBC.lib error
-set(CMAKE_EXE_LINKER_FLAGS /NODEFAULTLIB:\"LIBC.lib\")
+IF(WIN32)
+	# 'fix' LIBC.lib error
+	set(CMAKE_EXE_LINKER_FLAGS /NODEFAULTLIB:\"LIBC.lib\")
+ENDIF(WIN32)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 #Find SFML
@@ -80,6 +82,7 @@ if(OpenGL_FOUND)
 	target_link_libraries(OpenCraft ${OpenGL_LIBRARY})
 	include_directories(${OpenGL_INCLUDE_DIR})
 endif(OpenGL_FOUND)
+
 #FindOpenGL doesn't seem to work under windows
 if(WIN32)
 	target_link_libraries(OpenCraft opengl32.lib glu32.lib winmm.lib)
