Fixes for linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,16 +67,19 @@ add_executable(OpenCraft ${OPENCRAFT_SOURCES} ${OPENCRAFT_HEADERS})
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/depends/include/)
 
-# Include GLee + Freeglut
-target_link_libraries(OpenCraft ${PROJECT_SOURCE_DIR}/depends/lib/Glee.lib)
-target_link_libraries(OpenCraft ${PROJECT_SOURCE_DIR}/depends/lib/freeglut.lib)
+# Windows only
 if(WIN32)
+	# Include GLee + Freeglut
+	target_link_libraries(OpenCraft ${PROJECT_SOURCE_DIR}/depends/lib/GLee.lib)
+	target_link_libraries(OpenCraft ${PROJECT_SOURCE_DIR}/depends/lib/freeglut.lib)
 	# Windows Memory Usage
 	target_link_libraries(OpenCraft psapi.lib)
+	# 'fix' LIBC.lib error
+	set(CMAKE_EXE_LINKER_FLAGS /NODEFAULTLIB:\"LIBC.lib\")
+else(WIN32)
+	target_link_libraries(OpenCraft ${PROJECT_SOURCE_DIR}/depends/lib/libGLee.so)
+	target_link_libraries(OpenCraft /usr/local/lib/libglut.so)
 endif(WIN32)
-
-# 'fix' LIBC.lib error
-set(CMAKE_EXE_LINKER_FLAGS /NODEFAULTLIB:\"LIBC.lib\")
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
 #Find SFML
