--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set(OPENCRAFT_SOURCES
 	source/SandBlock.cpp
 	source/WoodBlock.cpp
 	source/WaterBlock.cpp
+	source/ChunkGenerator.cpp
 	source/ChunkLoader.cpp
 	source/World.cpp
 	source/WorldChunk.cpp
@@ -71,6 +72,7 @@ set(OPENCRAFT_HEADERS
 	include/WoodBlock.h
 	include/WaterBlock.h
 	include/BaseBlock.h
+	include/ChunkGenerator.h
 	include/ChunkLoader.h
 	include/World.h
 	include/WorldChunk.h
