Added Quadtree chunk storage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ set(OPENCRAFT_HEADERS
 	include/ChunkGenerator.h
 	include/ChunkLoader.h
 	include/World.h
+	include/WorldNode.h
 	include/WorldChunk.h
 	include/TextureManager.h
 	include/util.h
